Add StaisticController
